--- a/roles/consul/templates/consul.json.j2
+++ b/roles/consul/templates/consul.json.j2
@@ -1,16 +1,18 @@
 {
   "datacenter": "{{ consul_dc }}",
+{% if not consul_use_ec2 %}
   "bind_addr": "{{ consul_bind }}",
   "advertise_addr": "{{ consul_advertise }}",
   "node_name": "{{ ansible_hostname }}",
-  "rejoin_after_leave": true,
+{% endif %}
+  "rejoin_after_leave": false,
   "domain": "{{ consul_dns_domain }}",
   "client_addr": "0.0.0.0",
   "recursors" : [ "8.8.8.8" ],
 {% if consul_ui_enabled %}
   "ui": true,
 {% endif %}
-{% if consul_bootstrap_expect > 1 %}
+{% if consul_bootstrap_expect > 1 and not consul_use_ec2 %}
   "retry_join": [ {{ consul_retry_join }} ],
 {% endif %}
 {% if consul_gossip_key is defined %}
