--- a/roles/consul/templates/consul.json.j2
+++ b/roles/consul/templates/consul.json.j2
@@ -8,7 +8,9 @@
   "rejoin_after_leave": false,
   "domain": "{{ consul_dns_domain }}",
   "client_addr": "0.0.0.0",
-  "recursors" : [ "8.8.8.8" ],
+  "recursors" : [
+    {{ '\"' + ansible_dns.nameservers|join('\", \"' + '\"' ) + '\"'}}
+   ],
 {% if consul_ui_enabled %}
   "ui": true,
 {% endif %}
@@ -26,6 +28,7 @@
   "verify_outgoing": true,
 {% endif %}
   "enable_syslog": true,
+  "raft_protocol": 3,
   "data_dir": "/var/lib/consul",
   "disable_remote_exec": {{ consul_disable_remote_exec }}
 }
